--- a/css/main.css
+++ b/css/main.css
@@ -11,123 +11,11 @@ body {
   font-family: "mentone";
 }
 
-menu {
-  width: 100%;
-  height: 70px;
-  background-color: #00121f;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-menu p {
-  color: #fefefe;
-  font-size: 40px;
-  line-height: 70px;
-  margin-left: 3rem;
-}
-
-menu nav {
-  height: 70px;
-  width: 420px;
-  background-color: #F71931;
-  position: relative;
-}
-
-menu nav:before {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  border-bottom: 75px solid #00121f;
-  border-right: 50px solid #F71931;
-  width: 0;
-}
-
-menu nav p {
-  text-align: center;
-  font-size: 30px;
-}
-
-menu nav ul {
-  background-color: #F71931;
-  width: 370px;
-  height: 100vh;
-  float: right;
-  padding-top: 70px;
-  position: -webkit-sticky;
-  position: sticky;
-}
-
-menu nav ul li {
-  list-style: none;
-  margin: 3rem;
-  -webkit-transition-duration: 0.5s;
-          transition-duration: 0.5s;
-}
-
-menu nav ul li a {
-  color: #fefefe;
-  text-decoration: none;
-  font-size: 40px;
-}
-
-#checkbox1,
-span.toggle {
-  display: none;
-}
-
-span.toggle {
-  position: absolute;
-  right: 10%;
-  top: 30%;
-  color: white;
-  z-index: 2;
-  -webkit-transform: translate(-5%, 5%);
-          transform: translate(-5%, 5%);
-  text-align: center;
-  clear: both;
-  display: block;
-  font-size: 20px;
-  cursor: pointer;
-}
-
-.toggle:hover {
-  background-color: red;
-}
-
-.toggle:active {
-  color: white;
-}
-
-.toggle:focus {
-  color: white;
-}
-
-#checkbox1:checked + label .demo li {
-  opacity: 1;
-  visibility: visible;
-  -webkit-transition: all .7s linear;
-  transition: all .7s linear;
-}
-
-#checkbox1:checked + label .demo {
-  height: 300px;
-}
-
-/*Bestil knappen hvor der er link i fjerne stregen under teksten*/
 a {
   text-decoration: none;
 }
 
 /*Trash billedet på forsiden*/
-#trash-img {
-  width: 1920px;
-}
-
 /*Trash overskrift på billedet - forsiden*/
 #trash-overskrift {
   position: absolute;
@@ -152,10 +40,10 @@ a {
 
 /*Bestil knappen på billedet - forsiden*/
 #btn-bestil {
-  background-color: #f71931;
+  background-color: #F71931;
   width: 110px;
   height: 40px;
-  border: #f71931;
+  border: #F71931;
   color: #FEFEFE;
   font-size: 20px;
   position: absolute;
@@ -163,110 +51,6 @@ a {
   cursor: pointer;
 }
 
-/*Aktuelle film*/
-/*Overskrift aktuelle film - forsiden*/
-#Aktuel-film {
-  padding-left: 540px;
-  margin-top: 10px;
-}
-
-/*Posters lavet med grid 4*auto og med mellemrum mellem posters - forsiden*/
-.poster-forside {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: auto auto auto auto;
-      grid-template-columns: auto auto auto auto;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-column-gap: 10px;
-          column-gap: 10px;
-}
-
-.posters-bestil {
-  color: #FEFEFE;
-  font-size: 16px;
-}
-
-/*Højde få hver enkelt billede med 300px - forsiden*/
-/*Trash-poster*/
-#trash-poster {
-  height: 300px;
-  padding-top: 10px;
-}
-
-/*Bestil knap oven på trash poster*/
-#trash-bestil {
-  background-color: #f71931;
-  border: #f71931;
-  cursor: pointer;
-  width: 70px;
-  position: absolute;
-  top: 1660px;
-  left: 635px;
-}
-
-/*Citizenfour-poster*/
-#citizenfour-poster {
-  height: 300px;
-  padding-top: 10px;
-}
-
-/*Citizenfour bestil knap*/
-#citizenfour-bestil {
-  background-color: #f71931;
-  border: #f71931;
-  cursor: pointer;
-  width: 70px;
-  position: absolute;
-  top: 1660px;
-  left: 840px;
-}
-
-/*Ida poster*/
-#ida-poster {
-  height: 320px;
-}
-
-/*Ida bestil knap*/
-#ida-bestil {
-  background-color: #f71931;
-  border: #f71931;
-  cursor: pointer;
-  width: 70px;
-  position: absolute;
-  top: 1660px;
-  left: 1080px;
-}
-
-/*Riot poster*/
-#riot-poster {
-  height: 300px;
-  padding-top: 10px;
-}
-
-/*Riot bestil knap*/
-#riot-bestil {
-  background-color: #f71931;
-  border: #f71931;
-  cursor: pointer;
-  width: 70px;
-  position: absolute;
-  top: 1660px;
-  left: 1290px;
-}
-
-/*Overskriften under hver poster, har den samme class så de kan få en fed overskrift*/
-.posters-overskrift {
-  font-weight: bold;
-}
-
-/*Info teksten under hver poster, så de har samme størrelse*/
-.posters-info {
-  font-size: 16px;
-}
-
-/*Responsiv mobil*/
 @media screen and (max-width: 600px) {
   /*Trash img*/
   #trash-img {
