--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,4 @@
-$bg-color-button-red: #f71931;
+$bg-color-button-red: #F71931;
 $text-color-white: #FEFEFE;
 $text-color-black: #00121F;
 $secondary-color-lightblue: #187CFF;
@@ -8,6 +8,9 @@ $main-color2: #F71931;
 $main-color3: #FEFEFE;
 $sec-color1: #187CFF;
 $sec-solor2: #25FF3B;
+$maincolor: #F71931;
+$black: #00121F;
+$white: #FEFEFE;
 $font: "mentone";
 $bweight: Bold;
 $lweight: 'light';
@@ -23,102 +26,11 @@ $usize: 20px;
 body{
     font-family: "mentone";
 }
-$maincolor: #F71931;
-$black: #00121f;
-$white: #fefefe;
 
-menu{
-    width: 100%;
-    height: 70px;
-    background-color: $black;
-    display: flex;
-    justify-content: space-between;
-    p{
-        color: $white;
-        font-size: 40px;
-        line-height: 70px;
-        margin-left: 3rem;
-    }
-    nav{
-        height: 70px;
-        width: 420px;
-        background-color: $maincolor;
-        position: relative;
-        &:before {
-            content: '';
-            position: absolute;
-            bottom: 0; left: 0;
-            border-bottom: 75px solid $black;
-            border-right: 50px solid $maincolor;
-            width: 0;
-        }
-        p{
-            text-align: center;
-            font-size: 30px;
-        }
-        ul{
-            background-color: $maincolor;
-            width: 370px;
-            height: 100vh;
-            float: right;
-            padding-top: 70px;
-            position: sticky;
-            li{
-                list-style: none;
-                margin: 3rem;
-                transition-duration: 0.5s;
-                a{
-                    color: $white;
-                    text-decoration: none;
-                    font-size: 40px;
-                }
-            }
-        }
-    }
-} 
-#checkbox1,
-span.toggle {
-    display: none;
-}
-span.toggle {
-    position: absolute;
-    right: 10%;
-    top: 30%;
-    color: white;
-    z-index: 2;
-    transform: translate(-5%, 5%);
-    text-align: center;
-    clear: both;
-    display: block;
-    font-size: 20px;
-    cursor: pointer;
-}
-
-.toggle:hover {
-    background-color: red;
-}
-.toggle:active {
-    color: white;
-}
-.toggle:focus {
-    color: white;
-}
-#checkbox1:checked + label .demo li {
-    opacity: 1;
-    visibility: visible;
-    transition: all .7s linear;
-}
-#checkbox1:checked + label .demo{
-    height: 300px;
-}
-/*Bestil knappen hvor der er link i fjerne stregen under teksten*/
 a{
     text-decoration: none;
 }
 /*Trash billedet på forsiden*/
-#trash-img{
-    width: 1920px;
-}
 /*Trash overskrift på billedet - forsiden*/
 #trash-overskrift{
     position: absolute;
@@ -150,93 +62,9 @@ a{
     margin-top: 600px;
     cursor: pointer;
 }
-/*Aktuelle film*/
-/*Overskrift aktuelle film - forsiden*/
-#Aktuel-film{
-    padding-left: 540px;
-    margin-top: 10px;
-}
-/*Posters lavet med grid 4*auto og med mellemrum mellem posters - forsiden*/
-.poster-forside{
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    justify-content: center;
-    column-gap: 10px;
-}
-.posters-bestil{
-    color: $text-color-white;
-    font-size: $psize;
-}
-/*Højde få hver enkelt billede med 300px - forsiden*/
-/*Trash-poster*/
-#trash-poster{
-    height: 300px;
-    padding-top: 10px;
-}
-/*Bestil knap oven på trash poster*/
-#trash-bestil{
-    background-color: $bg-color-button-red;
-    border: $bg-color-button-red;
-    cursor: pointer;
-    width: 70px;
-    position: absolute;
-    top: 1660px;
-    left: 635px;
-}
-/*Citizenfour-poster*/
-#citizenfour-poster{
-    height: 300px;
-    padding-top: 10px;
-}
-/*Citizenfour bestil knap*/
-#citizenfour-bestil{
-    background-color: $bg-color-button-red;
-    border: $bg-color-button-red;
-    cursor: pointer;
-    width: 70px;
-    position: absolute;
-    top: 1660px;
-    left: 840px;
-}
-/*Ida poster*/
-#ida-poster{
-    height: 320px;
-}
-/*Ida bestil knap*/
-#ida-bestil{
-    background-color: $bg-color-button-red;
-    border: $bg-color-button-red;
-    cursor: pointer;
-    width: 70px;
-    position: absolute;
-   top: 1660px;
-   left: 1080px;
-}
-/*Riot poster*/
-#riot-poster{
-    height: 300px;
-    padding-top: 10px;
-}
-/*Riot bestil knap*/
-#riot-bestil{
-    background-color: $bg-color-button-red;
-    border: $bg-color-button-red;
-    cursor: pointer;
-    width: 70px;
-    position: absolute;
-    top: 1660px;
-    left: 1290px;
-}
-/*Overskriften under hver poster, har den samme class så de kan få en fed overskrift*/
-.posters-overskrift{
-    font-weight: bold;
-}
-/*Info teksten under hver poster, så de har samme størrelse*/
-.posters-info{
-    font-size: $psize;
-}
 
-/*Responsiv mobil*/
+
+
 @media screen and (max-width: 600px) {
     /*Trash img*/
     #trash-img{
