--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,162 @@
           box-sizing: border-box;
 }
 
+header {
+  background-color: black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-family: "mentone";
+}
+
+header p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: white;
+  font-size: 2rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 1rem;
+}
+
+header nav {
+  background-color: #f71931;
+  position: relative;
+  padding: 0 0 0 50px;
+}
+
+header nav:before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  border-bottom: 75px solid black;
+  border-right: 50px solid #f71931;
+  width: 0;
+}
+
+header nav .dems {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 1rem;
+}
+
+header nav .dems label {
+  font-size: 2rem;
+  color: white;
+}
+
+header nav .dems #checkbox {
+  display: none;
+}
+
+header nav .dems a {
+  text-decoration: none;
+}
+
+header nav ul {
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  height: 100vh;
+  z-index: 1;
+  background-color: #f71931;
+}
+
+header nav ul li {
+  list-style: none;
+  margin: 70px 0 0 2.5rem;
+}
+
+header nav ul li a {
+  text-decoration: none;
+  color: white;
+  font-size: 2rem;
+}
+
+main .trash-container {
+  width: 100%;
+  position: relative;
+}
+
+main .trash-container h1 {
+  color: white;
+  position: absolute;
+  font-size: 8rem;
+  bottom: 15rem;
+  left: 3rem;
+}
+
+main .trash-container p {
+  position: absolute;
+  color: #FEFEFE;
+  font-size: 16px;
+  bottom: 8rem;
+  left: 3rem;
+}
+
+main .trash-container button {
+  width: 110px;
+  height: 40px;
+  background-color: #F71931;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  bottom: 3rem;
+  left: 3rem;
+}
+
+main .trash-container img {
+  width: 100%;
+  height: 100vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+main #Aktuel-film {
+  margin: 1rem 0 0 10rem;
+}
+
+main .poster-forside {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-column-gap: 4rem;
+          column-gap: 4rem;
+  margin: 1rem 10rem;
+}
+
+main .poster-forside div figure {
+  position: relative;
+}
+
+main .poster-forside div figure img {
+  width: 100%;
+}
+
+main .poster-forside div figure button {
+  position: absolute;
+  bottom: 14px;
+  right: 10px;
+  background-color: #F71931;
+  border: none;
+  padding: .5rem 1rem;
+  color: white;
+}
+
 main section {
   margin: 2rem 10rem 0 10rem;
 }
@@ -241,5 +397,88 @@ main section .movie-booking .MBW .sal .container .row [id^=seatID]:not(.occupied
   cursor: pointer;
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
+}
+
+.foot {
+  height: 220px;
+  background-color: #00121F;
+  color: #FEFEFE;
+  font-family: "mentone";
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 20% 15% 22% 13% 30%;
+      grid-template-columns: 20% 15% 22% 13% 30%;
+  -ms-grid-rows: 20% 15% 5%;
+      grid-template-rows: 20% 15% 5%;
+  margin-top: 47%;
+  padding-top: 1.5%;
+  /*Overskrift footer*/
+  /*Adresse og tlf. Footer*/
+  /*Forestillinger og senior bio*/
+  /*Info om bio*/
+}
+
+.foot .item1 {
+  font-size: 40px;
+  font-weight: Bold;
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  grid-column-end: 1;
+  -ms-grid-row: 1;
+      grid-row-start: 1;
+  grid-row-end: 1;
+  -ms-grid-column-align: end;
+      justify-self: end;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.foot .item2 {
+  font-size: 16px;
+  font-weight: "light";
+  font-style: normal;
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  grid-column-end: 1;
+  -ms-grid-row: 2;
+      grid-row-start: 2;
+  grid-row-end: 3;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-flex-item-align: start;
+      -ms-grid-row-align: start;
+      align-self: start;
+}
+
+.foot .item3 {
+  font-size: 16px;
+  font-weight: "light";
+  font-style: normal;
+  -ms-grid-column: 3;
+      grid-column-start: 3;
+  grid-column-end: 3;
+  -ms-grid-row: 1;
+      grid-row-start: 1;
+  grid-row-end: 3;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-flex-item-align: start;
+      -ms-grid-row-align: start;
+      align-self: start;
+}
+
+.foot .item4 {
+  font-size: 16px;
+  font-weight: "light";
+  font-style: normal;
+  -ms-grid-column: 5;
+      grid-column-start: 5;
+  grid-column-end: 5;
+  -ms-grid-row: 1;
+      grid-row-start: 1;
+  grid-row-end: 2;
+  -ms-grid-column-align: center;
+      justify-self: center;
 }
 /*# sourceMappingURL=style.css.map */
