--- a/css/style.scss
+++ b/css/style.scss
@@ -8,6 +8,25 @@ $box-shadow-color: rgba(255, 255, 255, 0.7);
 $showcase-color: rgba(0, 0, 0, 0.1);
 $showcase-col: #777777;
 $text-color: #52C78E;
+$bg-color-button-red: #F71931;
+$text-color-white: #FEFEFE;
+$text-color-black: #00121F;
+$secondary-color-lightblue: #187CFF;
+$secondary-color-lightgreen: #25FF3B;
+$main-color1: #00121F;
+$main-color2: #F71931;
+$main-color3: #FEFEFE;
+$sec-color1: #187CFF;
+$sec-solor2: #25FF3B;
+$maincolor: #F71931;
+$black: #00121F;
+$white: #FEFEFE;
+$font: "mentone";
+$bweight: Bold;
+$lweight: 'light';
+$psize: 16px;
+$osize: 40px;
+$usize: 20px;
 
 *{
     padding: 0;
@@ -15,7 +34,125 @@ $text-color: #52C78E;
     font-family: mentone, sans-serif;
     box-sizing: border-box;
 }
+header{
+    background-color: black;
+    display: flex;
+    justify-content: space-between;
+    font-family: "mentone";
+    p{
+        display: flex;
+        color: white;
+        font-size: 2rem;
+        align-items: center;
+        margin: 0 1rem;
+    }
+    nav{
+        background-color: #f71931;
+        position: relative;
+        padding: 0 0 0 50px;
+        &:before {
+            content: '';
+            position: absolute;
+            bottom: 0; left: 0;
+            border-bottom: 75px solid black;
+            border-right: 50px solid #f71931;
+            width: 0;
+        }
+        .dems{
+            display: flex;
+            align-items: center;
+            margin: 1rem;
+            label{
+                font-size: 2rem;
+                color: white;
+            }
+            #checkbox{
+                display: none;
+            }
+            a{
+                text-decoration: none;
+            }
+        }
+        ul{
+            position: absolute;
+            top: 100%;
+            width: 100%;
+            height: 100vh;
+            z-index: 1;
+            background-color: #f71931;
+            li{
+                list-style: none;
+                margin: 70px 0 0 2.5rem;
+                a{
+                    text-decoration: none;
+                    color: white;
+                    font-size: 2rem;
+                }
+            }
+        }
+    }
+}
 main{
+    .trash-container{
+        width: 100%;
+        position: relative;
+        h1{
+            color: white;
+            position: absolute;
+            font-size: 8rem;
+            bottom: 15rem;
+            left: 3rem;
+        }
+        p{
+            position: absolute;
+            color: $white;
+            font-size: 16px;
+            bottom: 8rem;
+            left: 3rem;
+        }
+        button{
+            width: 110px;
+            height: 40px;
+            background-color: #F71931;
+            border: none;
+            cursor: pointer;
+            position: absolute;
+            bottom: 3rem;
+            left: 3rem;
+        }
+        img{
+            width: 100%;
+            height: 100vh;
+            object-fit: cover;
+        }
+    }
+    #Aktuel-film{
+        margin: 1rem 0 0 10rem;
+    }
+    .poster-forside{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        justify-content: center;
+        column-gap: 4rem;
+        margin: 1rem 10rem;
+        div{
+            figure{
+                position: relative;
+                img{
+                    width: 100%;
+                }
+                button{
+                    position: absolute;
+                    bottom: 14px;
+                    right: 10px;
+                    background-color: #F71931;
+                    border: none;
+                    padding: .5rem 1rem;
+                    color: white;
+                }
+            }
+        }
+    }
     section{
         margin: 2rem 10rem 0 10rem;
         .movie-info{
@@ -195,5 +332,62 @@ main{
             }
             
         }
+    }
+}
+.foot {
+    height: 220px;
+    background-color: $main-color1;
+    color: $main-color3;
+    font-family: $font;
+    display: grid;
+    grid-template-columns: 20% 15% 22% 13% 30%;
+    grid-template-rows: 20% 15% 5%;
+    margin-top: 47%;
+    padding-top: 1.5%;
+    /*Overskrift footer*/
+    .item1 {
+        font-size: $osize;
+        font-weight: $bweight;
+        grid-column-start: 1;
+        grid-column-end: 1;
+        grid-row-start: 1;
+        grid-row-end: 1;
+        justify-self: end;
+        align-self: center;
+    }
+    /*Adresse og tlf. Footer*/
+    .item2 {
+        font-size: $psize;
+        font-weight: $lweight;
+        font-style: normal;
+        grid-column-start: 1;
+        grid-column-end: 1;
+        grid-row-start: 2;
+        grid-row-end: 3;
+        justify-self: center;
+        align-self: start;
+    }
+    /*Forestillinger og senior bio*/
+    .item3 {
+        font-size: $psize;
+        font-weight: $lweight;
+        font-style: normal;
+        grid-column-start: 3;
+        grid-column-end: 3;
+        grid-row-start: 1;
+        grid-row-end: 3;
+        justify-self: center;
+        align-self: start;
+    }
+    /*Info om bio*/
+    .item4 {
+        font-size: $psize;
+        font-weight: $lweight;
+        font-style: normal;
+        grid-column-start: 5;
+        grid-column-end: 5;
+        grid-row-start: 1;
+        grid-row-end: 2;
+        justify-self: center;
     }
 }
